cluster/apps/default/external-services/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: router-headers
  namespace: default
spec:
  headers:
    customRequestHeaders:
      Host: "${ROUTER_IP}"
      Origin: "https://${ROUTER_IP}"
      Referer: "https://${ROUTER_IP}"
