cluster/apps/default/external-services/parents.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-parents
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: parents-insecure@kubernetescrd
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ext-svc-parents
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.100.102
    ports:
      - port: 443
        name: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parents-passthrough-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_PARENTS_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ext-svc-parents
                port:
                  number: 443
    - host: "*.${SECRET_PARENTS_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ext-svc-parents
                port:
                  number: 443
