cluster/apps/default/external-services/router.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-router-dashboard
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: default_router-insecure@kubernetescrd
    traefik.ingress.kubernetes.io/service.passhostheader: 'false'
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ext-svc-router-dashboard
  namespace: default
subsets:
  - addresses:
      - ip: ${ROUTER_IP}
    ports:
      - port: 443
        name: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ext-svc-router-dashboard-outbound
  namespace: default
  annotations:
    external-dns.kubernetes.io/enabled: 'true'
    external-dns.kubernetes.io/target: ${SECRET_ROUTER_OUTBOUND_IP}
    external-dns.kubernetes.io/cloudflare-proxied: 'false'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Middleware
    gethomepage.dev/icon: mdi-router-wireless
    gethomepage.dev/name: Router
    gethomepage.dev/pod-selector: app.kubernetes.io/name=homepage # Just to have something valid
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames:
    - ${SECRET_ROUTER_OUTBOUND_HOST}
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: router-headers
            namespace: default
      backendRefs:
        - name: ext-svc-router-dashboard
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ext-svc-router-dashboard-cloudflare
  namespace: default
  annotations:
    external-dns.kubernetes.io/enabled: 'true'
    external-dns.kubernetes.io/target: ${SECRET_ROUTER_OUTBOUND_IP}
    external-dns.kubernetes.io/cloudflare-proxied: 'true'
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames:
    - ${SECRET_ROUTER_CLOUDFLARE_HOST}
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: router-headers
            namespace: default
      backendRefs:
        - name: ext-svc-router-dashboard
          port: 443
